<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    >

    <TextView
        android:id="@+id/start_title"
        style="@style/TextStyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_top_padding"
        android:text="@string/start_day"
        app:layout_constraintEnd_toEndOf="@+id/start"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/end_title"
        style="@style/TextStyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_top_padding"
        android:text="@string/end_day"
        app:layout_constraintEnd_toEndOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/end"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/start"
        style="@style/TextStyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_holder"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_title"
        />

    <TextView
        android:id="@+id/end"
        style="@style/TextStyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/date_holder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_title"
        />

    <Button
        android:id="@+id/generate"
        style="@style/TextStyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_white_bg"
        android:padding="8dp"
        android:text="@string/generate"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/data_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate"
        />

    <include
        android:id="@+id/empty"
        layout="@layout/empty_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/data_recycler"
        app:layout_constraintEnd_toEndOf="@+id/data_recycler"
        app:layout_constraintStart_toStartOf="@+id/data_recycler"
        app:layout_constraintTop_toTopOf="@+id/data_recycler"
        />


</android.support.constraint.ConstraintLayout>